<?xml version="1.0"?>
<package>
  <name>nano_map</name>
  <version>0.1.2</version>
  <description>test</description>

  <maintainer email="sbenkel@uni-bremen.de">sbenkel</maintainer>
  <author>sbenkel</author>

  <license>BSD</license>


<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>apriltags_ros</run_depend>
  <run_depend>eigen3</run_depend>
  
  <run_depend>cmake_modules</run_depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>

  